fixed gap 160 -> 100 on events page 1920

--- a/inc/acf/blocks/events/events.module.scss
+++ b/inc/acf/blocks/events/events.module.scss
@@ -29,7 +29,7 @@
 
 @media screen and (min-width: variables.$full) {
     .container {
-        gap: 160px;
+        gap: 100px;
     }
 }
 
@@ -168,7 +168,7 @@
 
 @media screen and (min-width: variables.$full) {
     .events {
-        gap: 160px;
+        gap: 100px;
     }
 }
 
